--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     background-color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+        Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #game canvas {
